# search-algorithms

./: .gitignore  README.html  README.md  docker-compose.yml  main.py  pyproject.toml
data/: collect_papers.py  enrich_citations.py
data/raw/: papers.json
eval/: candidates.json  check.py  generate_candidates.py  label_ui.py  label_with_llm.py  queries.py  score.py  spotcheck_sample.json
index/: create_index.py  index_papers.py
search/: bm25.py  dense.py  embed.py  hybrid.py  rerank.py
