[project]
name = "search-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "lightgbm>=4.6.0",
    "numpy>=2.4.6",
    "opensearch-py>=3.2.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "tqdm>=4.68.4",
    "transformers>=5.13.1",
]
